--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 ------------------------------------- */
 body {
     background: #ffffff;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Josefin Sans', sans-serif;
     font-weight: 400;
     position: relative;
 }
@@ -55,7 +55,7 @@ h5 {
 }
 
 p {
-    font-size: 16px;
+    font-size: 18px !important;
     letter-spacing: 0.9px;
     line-height: 32px;
 }
