--- a/css/style.css
+++ b/css/style.css
@@ -441,6 +441,31 @@ footer a:hover {
         font-size: 9px;
     }
 }
+
+.team-img .team-social {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: rgba(68, 66, 90, 0.8);
+    transition: 0.5s;
+    z-index: 1;
+    opacity: 0;
+}
+
+#team .img-fluid {
+    height: 400px;
+    width: 100%;
+    object-fit: cover;
+}
+
+.team-item:hover .team-social {
+    opacity: 1;
+}
 /* Cookie banner */
 
 /* Google Fonts - Poppins */
